<resources>
    <string name="app_name">Bus Driver</string>
    <string name="placeholder_for_login">Username (try: driver-001)</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="routes">Routes</string>
    <string name="recent_trips">Recent Trips</string>
    <string name="end_trip">End Trip</string>
    <string name="no_active_trips">No active trips</string>
    <string name="trip_not_found">Trip not found</string>
</resources>